adjusted wso2-self-contained

--- a/apim-system/aws/wso2-self-contained/ansible/prepare_destroy_infrastructure.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/prepare_destroy_infrastructure.yml
@@ -1,7 +1,8 @@
 # Stops docker containers 
 # Unmounts EBS filesystem to be able to destroy infrastructure via Terraform
 - name: Preparing to destroy infrastructure
-  hosts: docker_hosts
+  hosts: mount_ebs
+
 
   tasks:
     - name: stop platform-api services 
