--- a/apim-system/aws/wso2-self-contained/ansible/deploy_docker_compose.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/deploy_docker_compose.yml
@@ -1,55 +1,22 @@
-# Deploys Platform API, MongoDB and Portal 
-- name: Create filesystem
-  hosts: mount_ebs
+- name: Load vars
+  hosts: platform_api
   vars_files:
-    - "../vars/ansible_vars.yml"
+   - "../vars/ansible_vars.yml"
 
   tasks:
     - include_vars: "{{config_root}}/{{config_vars_file}}"
-
-    - name: Create filesystem on EBS devices /dev/xvdh on box1 
-      filesystem:
-        fstype: ext4
-        dev: /dev/xvdh
-      become: yes
-
-    - name: Create mount point /data
-      file:
-        path: /data
-        owner: root
-        group: root
-        state: directory
-      become: yes
-
-    - name: Mount filesystem
-      mount:
-        path: /data
-        src: /dev/xvdh
-        fstype: ext4
-        state: mounted
-      become: yes  
-
-    - name: Create file /data/readme.md
-      file:
-        path: /data/readme.md
-        state: touch
-      become: yes
-
-- name: Install Docker hosts
-  hosts: docker_hosts
-  roles:
-    - dockerhost
+    - debug: msg="solace_spa_user {{solace_spa_user}}"
 
 - name: Install and start platform_api
   hosts: platform_api
   roles:
-    - platform-api
+    - platform-api #deploys and executes docker-compose of platform api
   vars_files:
-    - "../vars/ansible_vars.yml"
-
+   - "../vars/ansible_vars.yml"
 
   tasks:
     - include_vars: "{{config_root}}/{{config_vars_file}}"
+
     - name: copy
       copy:
         src: files/check_platform_api.sh
