refactored variable resolution

--- a/apim-system/aws/single-node/ansible/create_inventorymd.yml
+++ b/apim-system/aws/single-node/ansible/create_inventorymd.yml
@@ -2,10 +2,9 @@
   hosts: 127.0.0.1
   connection: local
 
-  vars_files:
-    - "../vars/ansible_vars.yml"
   tasks:
-    - include_vars: "{{config_root}}/{{config_vars_file}}"
+    - include_vars: "{{ lookup('env','SOLINVENTORY_CONFIG') or '../vars' }}/ansible_vars.yml"
+    - include_vars: "{{sensitive_ansible_vars_file}}"
     - include_vars: "{{generated_infrastructure_vars_file}}"
 
     - name: Render README.md
