--- a/apim-system/aws/single-node/ansible/remove_ip_mongodbcloud.yml
+++ b/apim-system/aws/single-node/ansible/remove_ip_mongodbcloud.yml
@@ -1,12 +1,12 @@
 # Registers IP withcloud.mongodb
 - name: Remove IP with cloud.mongodb
   hosts: 127.0.0.1
-  vars_files:
-    - "../vars/ansible_vars.yml"
 
   tasks:
-    - include_vars: "{{config_root}}/{{config_vars_file}}"
+    - include_vars: "{{ lookup('env','SOLINVENTORY_CONFIG') or '../vars' }}/ansible_vars.yml"
+    - include_vars: "{{sensitive_ansible_vars_file}}"
     - include_vars: "{{generated_infrastructure_vars_file}}"
+
     - name: Remove IP with cloud.mongdo
       uri:
         url: "{{ mongodb_cloud_api_url }}/{{ platform_api_host_ip }}"
