--- a/apim-system/aws/single-node/ansible/deploy_docker_compose.yml
+++ b/apim-system/aws/single-node/ansible/deploy_docker_compose.yml
@@ -11,28 +11,29 @@
   roles:
     - platform-api #deploys and executes docker-compose of platform api
 
-  - name: copy
-    copy:
-      src: files/check_platform_api.sh
-      dest: /data/platform-api/docker
-      owner: root
-      group: root
-      mode: 0744
-    become: yes
+  tasks:
+    - name: copy
+      copy:
+        src: files/check_platform_api.sh
+        dest: /data/platform-api/docker
+        owner: root
+        group: root
+        mode: 0744
+      become: yes
 
-  - name: execute script to check platform-api status
-    script: files/check_platform_api.sh /data/platform-api/docker platform-api-server-2
-    become: yes
+    - name: execute script to check platform-api status
+      script: files/check_platform_api.sh /data/platform-api/docker platform-api-server-2
+      become: yes
 
-  - name: check server status 
-    stat: 
-      path: /data/platform-api/docker/tmp/SERVER_INITIALIZED
-    register: check_result
+    - name: check server status 
+      stat: 
+        path: /data/platform-api/docker/tmp/SERVER_INITIALIZED
+      register: check_result
 
-  - debug: msg="PLATFORM-API successfully initialized, up and running"
-    when: check_result.stat.exists
+    - debug: msg="PLATFORM-API successfully initialized, up and running"
+      when: check_result.stat.exists
 
-  - debug: msg="PLATFORM-API NOT UP AND / OR INITIALIZED"
-    when: not check_result.stat.exists
+    - debug: msg="PLATFORM-API NOT UP AND / OR INITIALIZED"
+      when: not check_result.stat.exists
 
 
