--- a/apim-system/aws/wso2-self-contained/ansible/create_local_ssh.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/create_local_ssh.yml
@@ -4,9 +4,8 @@
   hosts: 127.0.0.1
   connection: local
 
-  vars_files:
-    - "../vars/ansible_vars.yml"
   tasks:
+    - include_vars: "{{ lookup('env','SOLINVENTORY_CONFIG') or '../vars' }}/ansible_vars.yml"
 
     - name: generate SSH key "{{ssh_key_filename}}"
       openssh_keypair:
