--- a/apim-system/aws/wso2-self-contained/ansible/site.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/site.yml
@@ -44,7 +44,8 @@
   hosts: all
   tasks:
     - name: Install MySQL Client
-      apt: name={{ item }}
+      apt:
+        name: {{ item }}
         state: present
         update_cache: yes
       with_items:
