--- a/apim-system/aws/wso2-self-contained/ansible/site.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/site.yml
@@ -45,7 +45,7 @@
   tasks:
     - name: Install MySQL Client
       apt:
-        name: {{ item }}
+        name: "{{ item }}"
         state: present
         update_cache: yes
       with_items:
