--- a/apim-system/aws/wso2-self-contained/ansible/site.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/site.yml
@@ -52,6 +52,7 @@
         - mysql-client-5.7
         - python-mysqldb
         - libmysqlclient-dev
+      become: yes
 
 - name: Install and start platform_api
   hosts: platform_api
