--- a/apim-system/aws/wso2-self-contained/vars/template_sensitive_ansible_vars.yml
+++ b/apim-system/aws/wso2-self-contained/vars/template_sensitive_ansible_vars.yml
@@ -6,9 +6,21 @@ portal_version: latest
 # sammode: dev -> login screen is disabled
 # sammode: prod -> login screen is enabled (username = solace_portal_login_user, password = solace_portal_login_password)
 sammode: prod
-#user-name of platform api (set in organization_users.json)
+
+#list of all platform api users (set in organization_users.json)
+solace_spa_users:
+  - user1:
+      name: user1
+      password: password1
+  - user2:
+      name: user2
+      password: password2
+  - user3:
+      name: admin1
+      password: secret1
+
+# the platform-api user for e.g. portal
 solace_spa_user: admin1
-#user-password of platform api (set in organization_users.json)
 solace_spa_password: secret1
 #admin-name of platform api (set as env in docker-compose)
 solace_spa_adminuser: admin2
