--- a/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/tasks/main.yml
+++ b/apim-system/aws/wso2-self-contained/ansible/roles/platform-api/tasks/main.yml
@@ -81,10 +81,12 @@
 
 - name: Remove docker image for platform-api-server
   shell: "docker rmi solaceiotteam/platform-api-server:{{platform_api_version}}"
+  become: yes
   ignore_errors: yes
 
 - name: Remove docker image for portal
   shell: "docker rmi solaceiotteam/apim-demo-portal:{{portal_version}}"
+  become: yes
   ignore_errors: yes
 
 - name: trigger docker-compose
