--- a/apim-system/aws/common/ansible/roles/asyncapi/tasks/main.yml
+++ b/apim-system/aws/common/ansible/roles/asyncapi/tasks/main.yml
@@ -5,8 +5,8 @@
   uri:
     url: "http://{{platform_api_host_ip}}:3000/v1/organizations"
     method: POST
-    user: {{solace_spa_adminuser}}
-    pssword: {{solace_spa_adminpassword}}
+    user: "{{solace_spa_adminuser}}"
+    pssword: "{{solace_spa_adminpassword}}"
     body_format: json
     body: "{ name: {{org_name}}, cloud-token: {{org_token}}"
 
