--- a/apim-system/aws/common/ansible/roles/asyncapi/tasks/main.yml
+++ b/apim-system/aws/common/ansible/roles/asyncapi/tasks/main.yml
@@ -6,7 +6,7 @@
     url: "http://{{platform_api_host_ip}}:3000/v1/organizations"
     method: POST
     user: "{{solace_spa_adminuser}}"
-    pssword: "{{solace_spa_adminpassword}}"
+    password: "{{solace_spa_adminpassword}}"
     body_format: json
     body: "{ name: {{org_name}}, cloud-token: {{org_token}}"
 
