--- a/apim-system/aws/common/ansible/roles/asyncapi/tasks/main.yml
+++ b/apim-system/aws/common/ansible/roles/asyncapi/tasks/main.yml
@@ -11,7 +11,24 @@
     body_format: json
     headers:
       Content-Type: application/json
+    status_code: 201
     body: "{ \"name\": \"{{org_name}}\", \"cloud-token\": \"{{org_token}}\"}"
+  ignore_errors: yes
+
+- name: Create environment
+  uri:
+    url: "http://{{platform_api_host_ip}}:3000/v1/{{org_name}}/environments"
+    method: POST
+    force_basic_auth: yes
+    user: "{{solace_spa_adminuser}}"
+    password: "{{solace_spa_adminpassword}}"
+    body_format: json
+    headers:
+      Content-Type: application/json
+    status_code: 201
+    body: "{ \"name\": \"{{item.name}}\", \"description\": \"{{item.description}}\", \"serviceId\": \"{{item.serviceid}}\"}"
+  ignore_errors: yes
+  loop: "{{org_environments}}"
 
 
 
