--- a/apim-system/aws/wso2-self-contained/ansible/template_ansible.cfg
+++ b/apim-system/aws/wso2-self-contained/ansible/template_ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+interpreter_python=/usr/bin/python3
 inventory = ../generated/inventory
 remote_user = ubuntu
 private_key_file = ../shared/keys/aws_key_box
