--- a/apim-system/local/docker-compose.yml
+++ b/apim-system/local/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     volumes:
       - mongodbdata:/data/db
     restart: unless-stopped
-  platform-api-server:
-    container_name: $APIM_SYSTEM_PROJECT_NAME-platform-api-server
+  apim-connector:
+    container_name: $APIM_SYSTEM_PROJECT_NAME-apim-connector
     links:
       - mongodb
     image: solaceiotteam/platform-api-server:latest
@@ -27,7 +27,7 @@ services:
   demo-portal-server:
     container_name: $APIM_SYSTEM_PROJECT_NAME-demo-portal-server
     links:
-      - platform-api-server
+      - apim-connector
     image: solaceiotteam/apim-demo-portal:latest
     ports:
       - ${DEMO_PORTAL_SERVER_PORT}:8090
