--- a/apim-system/local/docker-compose.yml
+++ b/apim-system/local/docker-compose.yml
@@ -32,13 +32,13 @@ services:
     ports:
       - ${DEMO_PORTAL_SERVER_PORT}:8090
     volumes:
-      - portaldata:/portal/data
+      - portaldata:/data/apim-portal
     restart: unless-stopped
     environment:
       #sammode=dev disables login screen
       - sammode=prod
-      #url of platform-api
-      - solace_spa_url=http://platform-api-server:3000/v1
+      #url of apim-connector
+      - solace_spa_url=http://apim-connector:3000/v1
       #user-name of platform api (as defined in organization_users.json)
       - solace_spa_user=${DEMO_PORTAL_API_USER}
       #user-password of platform api (as defined in organization_users.json)
