added x-origin element

--- a/use-cases/car-co/exposure/api-service-developer/api-event-services/asyncapi-specs/ApiConsumption.asyncapi-spec.yml
+++ b/use-cases/car-co/exposure/api-service-developer/api-event-services/asyncapi-specs/ApiConsumption.asyncapi-spec.yml
@@ -111,3 +111,6 @@ info:
   description: Subscribe to vehicle consumption event streams.
   x-view: provider
   version: 0.0.1
+  x-origin:
+    vendor: solace
+    name: apim-connector
