--- a/use-cases/car-co/exposure/api-service-developer/api-event-services/asyncapi-specs/ApiFailure.asyncapi-spec.yml
+++ b/use-cases/car-co/exposure/api-service-developer/api-event-services/asyncapi-specs/ApiFailure.asyncapi-spec.yml
@@ -107,3 +107,7 @@ info:
   description: Subscribe to vehicle failure alarms.
   x-view: provider
   version: 0.0.1
+  x-origin:
+    vendor: solace
+    name: apim-connector
+  
