--- a/use-cases/elevator-co/exposure/api-service-developer/api-event-services/asyncapi-specs/ApiMaintenance.asyncapi-spec.yml
+++ b/use-cases/elevator-co/exposure/api-service-developer/api-event-services/asyncapi-specs/ApiMaintenance.asyncapi-spec.yml
@@ -185,3 +185,6 @@ info:
   description: Subscribe to elevator maintenance events and update their status.
   x-view: provider
   version: 0.0.3
+  x-origin:
+    vendor: solace
+    name: apim-connector
