--- a/apim-system/local/docker-compose.yml
+++ b/apim-system/local/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     container_name: $APIM_SYSTEM_PROJECT_NAME-apim-connector
     links:
       - mongodb
-    image: solaceiotteam/platform-api-server:latest
+    # image: solaceiotteam/platform-api-server:latest
+    image: ${APIM_SYSTEM_CONNECTOR_SERVER_DOCKER_IMAGE}
     ports:
       - ${APIM_SYSTEM_CONNECTOR_SERVER_PORT}:3000
     volumes:
@@ -28,7 +29,7 @@ services:
     container_name: $APIM_SYSTEM_PROJECT_NAME-demo-portal-server
     links:
       - apim-connector
-    image: solaceiotteam/apim-demo-portal:latest
+    image: ${APIM_SYSTEM_DEMO_PORTAL_SERVER_DOCKER_IMAGE}
     ports:
       - ${DEMO_PORTAL_SERVER_PORT}:8090
     volumes:
