reworked for 0.1.0 apim connector

--- a/apim-system/local/docker-compose.yml
+++ b/apim-system/local/docker-compose.yml
@@ -23,8 +23,15 @@ services:
       - APP_ID=${APP_ID}
       - FILE_USER_REGISTRY=${FILE_USER_REGISTRY}
       - PLATFORM_PORT=3000
-      - ADMIN_USER=${ADMIN_USER}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - AUTH_EXTRACTION_USER_PRINCIPAL=${AUTH_EXTRACTION_USER_PRINCIPAL}
+      - AUTH_EXTRACTION_ORGS=${AUTH_EXTRACTION_ORGS}
+      - AUTH_EXTRACTION_ROLES=${AUTH_EXTRACTION_ROLES}
+      - AUTH_VERIFICATION_KEY=${AUTH_VERIFICATION_KEY}
+      - AUTH_VERIFICATION_ISSUER=${AUTH_VERIFICATION_ISSUER}
+      - AUTH_VERIFICATION_AUD=${AUTH_VERIFICATION_AUD}
+      - AUTH_DISCOVERY_OIDC_URL=${AUTH_DISCOVERY_OIDC_URL}
+      # - ADMIN_USER=${ADMIN_USER}
+      # - ADMIN_PASSWORD=${ADMIN_PASSWORD}
   demo-portal-server:
     container_name: $APIM_SYSTEM_PROJECT_NAME-demo-portal-server
     links:
