--- a/.github/workflows/use-case-tests.yml
+++ b/.github/workflows/use-case-tests.yml
@@ -21,7 +21,7 @@ jobs:
   use_case_elevator_co:
     runs-on: ubuntu-18.04
     env:
-      UC_TEST_ELEVATOR_HOME_DIR: "use-cases/elevator-co/bootstrap/test"
+      UC_TEST_ELEVATOR_HOME_DIR: "use-cases/elevator-co"
       UC_TEST_OUTPUT_DIR: "use-cases/common/test/tmp"
       UC_TEST_OUTPUT_NAME: "apim-reference-designs-use-case-tests"
     strategy:
@@ -80,9 +80,9 @@ jobs:
           export APIM_BOOTSTRAP_SOLACE_EVENT_PORTAL_TOKEN=${{ secrets.SOLACE_EVENT_PORTAL_BETA_TOKEN }}
           export APIM_BOOTSTRAP_SOLACE_CLOUD_DEV_GW_SERVICE_ID=${{ secrets.SOLACE_CLOUD_DEV_GW_SERVICE_ID }}
           export APIM_BOOTSTRAP_SOLACE_CLOUD_PROD_GW_SERVICE_ID=${{ secrets.SOLACE_CLOUD_PROD_GW_SERVICE_ID }}
-          cd "${UC_TEST_ELEVATOR_HOME_DIR}/.."
+          cd "${UC_TEST_ELEVATOR_HOME_DIR}/bootstrap"
           npm install
-          cd "${UC_TEST_ELEVATOR_HOME_DIR}"
+          cd "test"
           ./run.sh
 
       - name: Archive logs
