--- a/.github/workflows/use-case-tests.yml
+++ b/.github/workflows/use-case-tests.yml
@@ -21,7 +21,8 @@ jobs:
   use_case_elevator_co:
     runs-on: ubuntu-18.04
     env:
-      UC_TEST_ELEVATOR_HOME_DIR: "use-cases/elevator-co"
+      UC_TEST_ELEVATOR_CO_HOME_DIR: "use-cases/elevator-co"
+      UC_TEST_CAR_CO_HOME_DIR: "use-cases/car-co"
       UC_TEST_OUTPUT_DIR: "use-cases/common/test/tmp"
       UC_TEST_OUTPUT_NAME: "apim-reference-designs-use-case-tests"
     strategy:
@@ -72,7 +73,7 @@ jobs:
       #     cd "${UC_TEST_HOME_DIR}"
       #     npm install
 
-      - name: Run Elevator Tests
+      - name: Run Tests
         run: |
           export APIM_BOOTSTRAP_SOLACE_CLOUD_API_URL=${{ secrets.SOLACE_CLOUD_API_URL }}
           export APIM_BOOTSTRAP_SOLACE_CLOUD_TOKEN=${{ secrets.SOLACE_CLOUD_TOKEN }}
@@ -80,10 +81,28 @@ jobs:
           export APIM_BOOTSTRAP_SOLACE_EVENT_PORTAL_TOKEN=${{ secrets.SOLACE_EVENT_PORTAL_BETA_TOKEN }}
           export APIM_BOOTSTRAP_SOLACE_CLOUD_DEV_GW_SERVICE_ID=${{ secrets.SOLACE_CLOUD_DEV_GW_SERVICE_ID }}
           export APIM_BOOTSTRAP_SOLACE_CLOUD_PROD_GW_SERVICE_ID=${{ secrets.SOLACE_CLOUD_PROD_GW_SERVICE_ID }}
-          cd "${UC_TEST_ELEVATOR_HOME_DIR}/bootstrap"
+          echo "############# elevator-co #############"
+          cd "${GITHUB_WORKSPACE}/${UC_TEST_ELEVATOR_CO_HOME_DIR}/bootstrap"
+          npm install
+          cd "test"
+          echo "############# car-co #############"
+          cd "${GITHUB_WORKSPACE}/${UC_TEST_CAR_CO_HOME_DIR}/bootstrap"
           npm install
           cd "test"
           ./run.sh
+
+      # - name: Run Elevator-Co Tests
+      #   run: |
+      #     export APIM_BOOTSTRAP_SOLACE_CLOUD_API_URL=${{ secrets.SOLACE_CLOUD_API_URL }}
+      #     export APIM_BOOTSTRAP_SOLACE_CLOUD_TOKEN=${{ secrets.SOLACE_CLOUD_TOKEN }}
+      #     export APIM_BOOTSTRAP_SOLACE_EVENT_PORTAL_API_URL=${{ secrets.SOLACE_EVENT_PORTAL_BETA_API_URL }}
+      #     export APIM_BOOTSTRAP_SOLACE_EVENT_PORTAL_TOKEN=${{ secrets.SOLACE_EVENT_PORTAL_BETA_TOKEN }}
+      #     export APIM_BOOTSTRAP_SOLACE_CLOUD_DEV_GW_SERVICE_ID=${{ secrets.SOLACE_CLOUD_DEV_GW_SERVICE_ID }}
+      #     export APIM_BOOTSTRAP_SOLACE_CLOUD_PROD_GW_SERVICE_ID=${{ secrets.SOLACE_CLOUD_PROD_GW_SERVICE_ID }}
+      #     cd "${UC_TEST_ELEVATOR_CO_HOME_DIR}/bootstrap"
+      #     npm install
+      #     cd "test"
+      #     ./run.sh
 
       - name: Archive logs
         if: ${{ (failure() && !cancelled()) || (always() && (github.event_name=='workflow_dispatch' || env.DEBUG_FLAG=='true') ) }}
