fixes of .env and docker-compose

--- a/apim-system/aws/axway-single-node/docker-compose/.env
+++ b/apim-system/aws/axway-single-node/docker-compose/.env
@@ -55,7 +55,8 @@ EXTERNAL_PORT=80
 NGINX_CONF_LOCATION=~/nginx.conf
 
 # axway-agent configuration
-AXWAY_AGENT_IMAGE="solace-axway-agent:alpha"
+AXWAY_AGENT_IMAGE="solaceiotteam/solace-axway-agent:alpha"
+# Pollinterval in seconds the agent is calling Axway Central
 CENTRAL_POLLINTERVAL="60s"
 #URL of Axway Central 
 CENTRAL_URL="https://central.eu-fr.axway.com"
