--- a/apim-system/aws/axway-single-node/docker-compose/docker.compose.yml
+++ b/apim-system/aws/axway-single-node/docker-compose/docker.compose.yml
@@ -76,19 +76,19 @@ services:
     ports:
       - 8989:8989
     environment:
-      CENTRAL_POLLINTERVAL: ${CENTRAL_POLLINTERVAL}
-      CENTRAL_URL: ${CENTRAL_URL}
-      CENTRAL_ORGANIZATIONID: ${CENTRAL_ORGANIZATIONID}
-      CENTRAL_ENVIRONMENT: ${CENTRAL_ENVIRONMENT}
-      CENTRAL_AUTH_CLIENTID: ${CENTRAL_AUTH_CLIENTID}
-      CENTRAL_AUTH_PRIVATEKEY_DATA: ${CENTRAL_AUTH_PRIVATEKEY_DATA}
-      CENTRAL_AUTH_PUBLICKEY_DATA: ${CENTRAL_AUTH_PUBLICKEY_DATA}
-      #pointing to docker-compose local connector
-      GATEWAY-SECTION_CONNECTORURL: "http://apim-connector:3000/v1/"
-      GATEWAY-SECTION_CONNECTORADMINUSER: ${GATEWAY-SECTION_CONNECTORADMINUSER}
-      GATEWAY-SECTION_CONNECTORADMINPASSWORD: ${GATEWAY-SECTION_CONNECTORADMINPASSWORD}
-      GATEWAY-SECTION_CONNECTORORGUSER: ${GATEWAY-SECTION_CONNECTORORGUSER}
-      GATEWAY-SECTION_CONNECTORORGPASSWORD: ${GATEWAY-SECTION_CONNECTORORGPASSWORD}
+      - CENTRAL_POLLINTERVAL=${CENTRAL_POLLINTERVAL}
+      - CENTRAL_URL=${CENTRAL_URL}
+      - CENTRAL_ORGANIZATIONID=${CENTRAL_ORGANIZATIONID}
+      - CENTRAL_ENVIRONMENT=${CENTRAL_ENVIRONMENT}
+      - CENTRAL_AUTH_CLIENTID=${CENTRAL_AUTH_CLIENTID}
+      - CENTRAL_AUTH_PRIVATEKEY_DATA=${CENTRAL_AUTH_PRIVATEKEY_DATA}
+      - CENTRAL_AUTH_PUBLICKEY_DATA=${CENTRAL_AUTH_PUBLICKEY_DATA}
+        #pointing to docker-compose local connector
+      - GATEWAY-SECTION_CONNECTORURL="http://apim-connector:3000/v1/"
+      - GATEWAY-SECTION_CONNECTORADMINUSER=${GATEWAY-SECTION_CONNECTORADMINUSER}
+      - GATEWAY-SECTION_CONNECTORADMINPASSWORD=${GATEWAY-SECTION_CONNECTORADMINPASSWORD}
+      - GATEWAY-SECTION_CONNECTORORGUSER=${GATEWAY-SECTION_CONNECTORORGUSER}
+      - GATEWAY-SECTION_CONNECTORORGPASSWORD=${GATEWAY-SECTION_CONNECTORORGPASSWORD}
        
 volumes:
   portaldata:
