introduced mongodb docker image version

--- a/apim-system/aws/axway-single-node/docker-compose/.env
+++ b/apim-system/aws/axway-single-node/docker-compose/.env
@@ -1,4 +1,6 @@
 #### Mongo DB, 
+# MongoDB Docker image
+MONGO_DOCKER_IMAGE=mongo:5.0.2
 # location of data directory on host system
 MONGODB_DATA_MOUNT_PATH=/usr/data/mongodb
 
